# dwmblocksrs

./: Cargo.toml  README.md  config.yaml  my_custom_segment.rs  test_config.yaml  test_config_color.yaml
examples/: custom_segment.rs
src/: color.rs  config.rs  lib.rs  main.rs  segments.rs  signals.rs  status_bar.rs
src/segments/: constant.rs  program_output.rs
test_script_dir/: segment1  segment2
