[package]
name = "dwmblocksrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dwmblocksrs"
path = "src/lib.rs"

[[bin]]
name = "dwmblocksrs"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook-async-std = "0.2.2"
x11 = "2.19.1"
num-integer = "0.1.44"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
libc = "0.2.119"
simple_logger = "2.1.0"
log = "0.4.14"
format_serde_error = "0.3.0"
clap = "3.1.5"
dirs = "4.0.0"
shellexpand = "2.1.0"
async-std = { version = "1.10.0", features = ["attributes"] }
lazy_static = "1.4.0"